[package]
name = "demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.10.2"
winit = "0.25.0"
pollster = "0.2.4"
preon_core = { path = "../preon_core" }
preon_renderer_wgpu = { path = "../preon_renderer_wgpu" }