[package]
name = "preon_ecs"
authors = ["Hugo4IT"]
description = "A general-purpose Entity Component System focussed on speed and simplicity. It is also the main ECS crate for preon_engine."
categories = ["game-development", "rust-patterns", "data-structures"]
keywords = ["ecs", "optimization", "gamedev", "fast", "simple"]
repository = "https://github.com/Hugo4IT/PreonEngine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
paste = "1.0"
