[package]
name = "preon_engine"
authors = ["Hugo4IT"]
description = "A flexible, MIT-licensed, GPU-accelerated, ECS-based User Interface solution focussed on efficiency and simplicity."
categories = ["gui", "graphics", "game-development"]
keywords = ["gui", "ui", "framework", "simple", "fast"]
repository = "https://github.com/Hugo4IT/PreonEngine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
preon_ecs = { path = "../preon_ecs" }