[package]
name = "preon_engine"
authors = ["Hugo4IT"]
description = "A flexible, MIT-licensed, GPU-accelerated User Interface solution focused on efficiency and simplicity."
categories = ["gui", "graphics", "game-development"]
keywords = ["gui", "ui", "framework", "simple", "fast"]
repository = "https://github.com/Hugo4IT/PreonEngine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
futures-util = "0.3.21"
async-trait = "0.1.53"

[dev-dependencies]
preon_canvas_wgpu = { path = "../preon_canvas_wgpu" }