[package]
name = "preon_module_wgpu"
version = "0.1.0"
edition = "2021"

[features]
default = []
android = ["ndk-glue"]

[dependencies]
bytemuck = { version = "1.12.2", features = [ "derive" ] }
ndk-glue = { version = "0.5.2", optional = true }
preon_engine = { path = "../preon_engine" }
directories = "4.0.1"
wgpu_glyph = "0.18.0"
pollster = "0.2.5"
image = "0.24.4"
winit = "0.27.5"
sheep = "0.3.0"
wgpu = "0.14.0"
log = "0.4.17"
